# kaggle-data-pipeline-with-aws

./: .gitignore  README.md  analysis.ipynb  app.py  cdk.json  matchwise_data.csv  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/scripts/: quality_checks.sh  setup_environment.sh
.github/workflows/: quality_check.yaml
aws/: app.py  constants.py  mens_t20i_dataset_stack.py  parameters.py  utils.py
men_t20i_dataset/: mens_t20i_dataset_stack.py
mens_t20i_dataset/: mens_t20i_dataset_stack.py
scripts/: create_aws_layer.py
src/cdk/: app.py  mens_t20i_dataset_stack.py
src/lambdas/download_from_cricsheet/: download_from_cricsheet_lambda_function.py
src/mens_t20i_data_collector/_lambdas/: constants.py  utils.py
src/mens_t20i_data_collector/_lambdas/convert_dynamodb_data_to_csv/: convert_dynamo_db_data_to_csv_lambda.py
src/mens_t20i_data_collector/_lambdas/convert_mongodb_data_to_csv/: convert_mongo_db_data_to_csv_lambda.py
src/mens_t20i_data_collector/_lambdas/download_from_cricsheet/: download_from_cricsheet_lambda_function.py
src/mens_t20i_data_collector/_lambdas/extract_deliverywise_cricsheet_data/: extract_deliverywise_cricsheet_data_lambda_function.py
src/mens_t20i_data_collector/_lambdas/extract_matchwise_cricsheet_data/: extract_matchwise_cricsheet_data_lambda_function.py
src/mens_t20i_data_collector/_lambdas/upload_dataset_to_kaggle/: upload_dataset_to_kaggle_lambda.py
src/mens_t20i_data_collector/lambdas/download_from_cricsheet/: lambda_logic.py  (+1 more)
tests/unit/: test_mens_t20i_dataset_stack.py
