[metadata]
name = mens_t20i_data_collector
version = 0.1
description = A package for collecting T20I cricket data

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src
exclude=build

[options.entry_points]
console_scripts =
    build_packages = build.build_packages:build_packages
